chore: push missing db schema and migrations
